# git_example_repo

./: README.md  main.py  pyproject.toml
src/git_example_repo/: __init__.py
